# ADI-Stack-Server

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  run_en_batch_verification.sh  versions.json
.github/actions/runner-setup/: action.yaml
.github/actions/slack-notify/: action.yaml
.github/workflows/: ci.yml  release-bins.yml  release-please.yml  spec-tests.yaml
docs/src/: SUMMARY.md
genesis/: genesis.json
integration-tests/: Cargo.toml
integration-tests/src/: assert_traits.rs  lib.rs
integration-tests/tests/: call.rs
lib/batch_verification/: Cargo.toml
lib/batch_verification/src/: config.rs  lib.rs  server_verification_component.rs  signature.rs  verification_client.rs  verification_request.rs  verification_response.rs  verification_server.rs
lib/batch_verification/src/wire_format/: conversion.rs  mod.rs  v1.rs
lib/contract_interface/src/: models.rs
lib/gas_adjuster/src/: lib.rs  provider.rs  tests.rs  traits.rs
lib/genesis/src/: lib.rs
lib/l1_sender/: Cargo.toml
lib/l1_sender/src/: batcher_metrics.rs  batcher_model.rs  config.rs  dry_run.rs  lib.rs  pipeline_component.rs  run.rs
lib/l1_sender/src/commands/: commit.rs  execute.rs  prove.rs
lib/l1_watcher/src/: commit_watcher.rs  config.rs  execute_watcher.rs  lib.rs  tx_watcher.rs  util.rs  watcher.rs
lib/mempool/: Cargo.toml
lib/mempool/src/: lib.rs  metrics.rs  reth_state.rs  stream.rs  traits.rs
lib/merkle_tree/src/: lib.rs  with_version.rs
lib/multivm/: Cargo.toml  build.rs
lib/multivm/src/: lib.rs
lib/multivm/src/apps/: mod.rs
lib/object_store/src/: factory.rs
lib/observability/src/: latency_distribution_tracker.rs  logs.rs  sentry.rs
lib/pipeline/src/: builder.rs  peekable_receiver.rs  traits.rs
lib/priority_tree/: Cargo.toml
lib/priority_tree/src/: lib.rs
lib/rocksdb/src/: db.rs
lib/rpc/: Cargo.toml
lib/rpc/src/: debug_impl.rs  eth_call_handler.rs  eth_impl.rs  lib.rs  sandbox.rs  state_override_view.rs  tx_handler.rs
lib/sequencer/src/: config.rs
lib/sequencer/src/execution/: block_context_provider.rs  block_executor.rs  metrics.rs  mod.rs
lib/sequencer/src/model/: blocks.rs
lib/state_full_diffs/src/: storage.rs
lib/storage/: Cargo.toml
lib/storage/src/db/: mod.rs  replay.rs
lib/storage_api/: Cargo.toml
lib/storage_api/src/: lib.rs  replay.rs  repository.rs  state_override_view.rs
lib/types/src/: batch_signature.rs  lib.rs
loadbase/: Cargo.toml
tools/state-viewer/: Cargo.toml  README.md
tools/state-viewer/src/: app.rs  db.rs  main.rs  ui.rs
tools/state-viewer/src/schema/: block_replay.rs  mod.rs  preimages.rs  repository.rs  state.rs  tree.rs  utils.rs
