[package]
name = "state-viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
hex = "0.4"
ratatui = { version = "0.26", default-features = false, features = [
    "crossterm",
] }
alloy = { workspace = true, features = ["serde"] }
zksync_os_rocksdb = { path = "../../lib/rocksdb" }
zksync_os_storage_api = { path = "../../lib/storage_api" }
zksync_os_types = { path = "../../lib/types" }
zksync_os_interface = { workspace = true }
bincode = { workspace = true }
